[gd_scene load_steps=2 format=3 uid="uid://cr8evn36b5dj7"]

[ext_resource type="Script" uid="uid://duo5s3637mwa2" path="res://Scripts/menu.gd" id="1_xdvgc"]

[node name="Menu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdvgc")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Menu"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Level1" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Options" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="HBoxContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
